--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,9 @@ android {
             viewBinding true
         }
     }
+    buildFeatures {
+        viewBinding true
+    }
 }
 repositories {
     mavenCentral()
